5151.	[func]		Options that have been been marked as obsolete in
			named.conf for a very long time are now fatal
			configuration errors. [GL #358]

5150.	[cleanup]	Remove the ability to compile BIND with assertions
			disabled. [GL #735]

5149.	[func]		"rndc dumpdb" now prints a line above a stale RRset
			indicating how long the data will be retained in the
			cache for emergency use. [GL #101]

5148.	[bug]		named did not sign the TKEY response. [GL #821]

5147.	[bug]		dnssec-keymgr: Add a five-minute margin to better
			handle key events close to 'now'. [GL #848]

5146.	[placeholder]

5145.	[func]		Use atomics instead of locked variables for isc_quota
			and isc_counter. [GL !1389]

5144.	[bug]		dig now returns a non-zero exit code when a TCP
			connection is prematurely closed by a peer more than
			once for the same lookup.  [GL #820]

5143.	[bug]		dnssec-keymgr and dnssec-coverage failed to find
			key files for zone names ending in ".". [GL #560]

5142.	[cleanup]	Removed "configure --disable-rpz-nsip" and
			"--disable-rpz-nsdname" options. "nsip-enable"
			and "nsdname-enable" both now default to yes,
			regardless of compile-time settings. [GL #824]

5141.	[placeholder]

5140.	[bug]		Don't immediately mark existing keys as inactive and
			deleted when running dnssec-keymgr for the first
			time. [GL #117]

5139.	[bug]		If possible, don't use forwarders when priming.
			This ensures we can get root server IP addresses
			from priming query response glue, which may not
			be present if the forwarding server is returning
			minimal responses. [GL #752]

5138.	[bug]		Under some circumstances named could hit an assertion
			failure when doing qname minimization when using
			forwarders. [GL #797]

5137.	[func]		named now logs messages whenever a mirror zone becomes
			usable or unusable for resolution purposes. [GL #818]

5136.	[cleanup]	Check in named-checkconf that allow-update and
			allow-update-forwarding are not set at the